# tiny-inference

./: .gitignore  HPML_Final_Project_Tiny_Inference_Filled.pptx  LICENSE  README.md  requirements.txt
configs/: baseline.yaml  optimized.yaml
deliverables/: Tiny_Robotic_Inference_Paper.tex
etc/: transform_prompt
results/dashboard/: README.md  latency_reports.csv
ros2_ws/src/tiny_inference_ros/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/tiny_inference_ros/config/: demo_plan.json  panda_gazebo_controllers.yaml
ros2_ws/src/tiny_inference_ros/launch/: gazebo_panda_demo.launch.py  scripted_demo.launch.py  symbolic_demo.launch.py
ros2_ws/src/tiny_inference_ros/tiny_inference_ros/: __init__.py  plan_schema.py  scripted_pick_place_node.py  test_arm_motion_node.py
ros2_ws/src/tiny_inference_ros/urdf/: simple_panda.urdf.xacro
ros2_ws/src/tiny_inference_ros/worlds/: panda_demo.world.sdf  symbolic_demo.world.sdf
scripts/: run_baseline.sh  run_optimized.sh
src/: benchmark.py  language_to_action.py  output_inference.py  prompt_inference_server.py  wandb_latency.py
