<?xml version="1.0"?>
<package format="3">
  <name>tiny_inference_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge from tiny-inference symbolic plans to a scripted Panda pick/place demo.</description>
  <maintainer email="todo@example.com">tiny-inference</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
