<?xml version="1.0"?>
<package format="3">
  <name>tiny_inference_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge from tiny-inference symbolic plans to a symbolic Gazebo pick/place demo.</description>
  <maintainer email="mjm2442@columbia.edu">Michael Mihaley</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
